tests/ui/tests/lowering/mutually-exclusive-attributes.lushui
;;; TEST fail check -Z internals

@intrinsic @known
data Typ: const Type @Int @Int32 (@Nat 12)
